# MemoryOS

./: .coverage  README.md  debug.py  memoryos_test.db  pyproject.toml  requirements.txt  setup.py
examples/: basic_chat_memory.py  custom_embedding.py  custom_summarizer.py
memoryos/: __init__.py  config.py  core.py  exceptions.py  log.py  models.py  test_core.py
memoryos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memoryos/compression/: __init__.py  compressor.py  summarizer.py  token_budget.py
memoryos/embeddings/: __init__.py  base.py  sentence_transformer.py
memoryos/extraction/: __init__.py  confidence.py  deduplicator.py  extractor.py  patterns.py
memoryos/interfaces/: __init__.py  embedding_provider.py  ranker.py  storage_backend.py  summarizer.py
memoryos/memory/: __init__.py  episodic.py  manager.py  semantic.py  working.py
memoryos/retrieval/: __init__.py  builder.py  ranker.py  retriever.py  scorer.py
memoryos/storage/: __init__.py  base.py  db.py  faiss_index.py  index.py  migrations.py  sqlite_store.py
memoryos/utils/: text.py
memoryos_local.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_confidence.py  test_context_builder.py  test_core.py  test_deduplication.py  test_fact_extraction.py  test_memoryos_all.py  test_quality_hardening.py  test_sentence_transformer_embedding.py  test_working_memory.py
